2. Сервис - UrlShortCut [#13799] - метод получения статистики LinkController.statistic приведён в рабочее состояние, добавлена валидация аргументов методов, добавлена глобальная обработка исключений в виде класса ValidationControllerAdvice